take mineId out of the path, make it just another variable
