# openapi.json
@@ -55,7 +55,7 @@
         }
       }
     },
-    "/mine/config/{mineId}": {
+    "/mine/config": {
       "get": {
         "summary": "Get mine config",
         "description": "return configured details (if any) for a given mine id.",
@@ -63,7 +63,7 @@
         "parameters": [
           {
             "name": "mineId",
-            "in": "path",
+            "in": "query",
             "description": "ID of mine config to retrieve",
             "required": true,
             "schema": {
@@ -101,16 +101,14 @@
             }
           }
         }
-      }
-    },
-    "/mine/config/delete/{mineId}": {
+      },
       "delete": {
         "summary": "Delete config associated with mine instance",
         "operationId": "deleteConfig",
         "parameters": [
           {
             "name": "mineId",
-            "in": "path",
+            "in": "query",
             "description": "ID of mine config to delete",
             "required": true,
             "schema": {
@@ -191,7 +189,7 @@
         }
       }
     },
-    "/file/properties/save/{mineId}": {
+    "/file/properties/save": {
       "post": {
         "summary": "Save file properties to a given InterMine pre-build config",
         "description": "Following on from `detectFileProperties`, we need to save a set of metadata associated with a file. This can be run multiple times, as the user may upload an unknown number of files.",
@@ -199,7 +197,7 @@
         "parameters": [
           {
             "name": "mineId",
-            "in": "path",
+            "in": "query",
             "description": "ID of mine to fetch",
             "required": true,
             "schema": {
@@ -243,13 +241,13 @@
         }
       }
     },
-    "/mine/dataTools/{mineId}": {
+    "/mine/dataTools": {
       "get": {
         "summary": "Retrieve set tools to be used for the given mine",
         "parameters": [
           {
             "name": "mineId",
-            "in": "path",
+            "in": "query",
             "description": "ID of mine config to retrieve",
             "required": true,
             "schema": {
@@ -299,7 +297,7 @@
         "parameters": [
           {
             "name": "mineId",
-            "in": "path",
+            "in": "query",
             "description": "ID of mine config to retrieve",
             "required": true,
             "schema": {
@@ -345,7 +343,7 @@
         }
       }
     },
-    "/supplementaryDataSources/{mineId}": {
+    "/supplementaryDataSources": {
       "get": {
         "summary": "Get list of possible supplementary data sources for this mine config",
         "description": "Returns a list of possible external data sources to add to this mine, e.g. GO terms, publications, etc.",
@@ -353,7 +351,7 @@
         "parameters": [
           {
             "name": "mineId",
-            "in": "path",
+            "in": "query",
             "description": "ID of mine config to retrieve",
             "required": true,
             "schema": {
@@ -405,7 +403,7 @@
         "parameters": [
           {
             "name": "mineId",
-            "in": "path",
+            "in": "query",
             "description": "ID of mine config to retrieve",
             "required": true,
             "schema": {
@@ -445,7 +443,7 @@
         }
       }
     },
-    "/mine/descriptors/{mineId}": {
+    "/mine/descriptors": {
       "post": {
         "summary": "Set mine descriptors",
         "description": "Set the properties associated with this mine, e.g. name",
@@ -453,7 +451,7 @@
         "parameters": [
           {
             "name": "mineId",
-            "in": "path",
+            "in": "query",
             "description": "ID of mine config to retrieve",
             "required": true,
             "schema": {
@@ -503,7 +501,7 @@
         "parameters": [
           {
             "name": "mineId",
-            "in": "path",
+            "in": "query",
             "description": "ID of mine config to retrieve",
             "required": true,
             "schema": {
